force-app/main/default/objects/EYI_Customer_Information_Form__c/EYI_Customer_Information_Form__c.object-meta.xml
<CustomObject>
    <label>CIF Records</label>
    <nameField>
        <displayFormat>CIF-{0000}</displayFormat>
        <label>Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CIF Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>