force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/Customer_Locality__c.field-meta.xml
<CustomField>
    <fullName>Customer_Locality__c</fullName>
    <label>Customer Locality</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EYI_Customer_Address_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>EYI_Locality</valueSetName>
    </valueSet>
</CustomField>