force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Address_1__c.field-meta.xml
<CustomField>
    <fullName>EYI_Address_1__c</fullName>
    <inlineHelpText>Office/House No</inlineHelpText>
    <label>Address 1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>