force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Address_2__c.field-meta.xml
<CustomField>
    <fullName>EYI_Address_2__c</fullName>
    <inlineHelpText>Area/Street</inlineHelpText>
    <label>Address 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>