force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Address_3__c.field-meta.xml
<CustomField>
    <fullName>EYI_Address_3__c</fullName>
    <inlineHelpText>Landmark</inlineHelpText>
    <label>Address 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>