force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Age__c.field-meta.xml
<CustomField>
    <fullName>EYI_Age__c</fullName>
    <label>Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;20</fullName>
            </value>
            <value>
                <fullName>21-30</fullName>
            </value>
            <value>
                <fullName>31-40</fullName>
            </value>
            <value>
                <fullName>41-50</fullName>
            </value>
            <value>
                <fullName>51-60</fullName>
            </value>
            <value>
                <fullName>&gt;60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>