force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Age_Group_Formula__c.field-meta.xml
<CustomField>
    <fullName>EYI_Age_Group_Formula__c</fullName>
    <formula>IF(
NOT(ISBLANK(EYI_Date_of_birth__c)),
IF(
FLOOR((TODAY() - EYI_Date_of_birth__c) / 365.25) &lt; 18,
&quot;0 - 17&quot;,
IF(
FLOOR((TODAY() - EYI_Date_of_birth__c) / 365.25) &lt;= 25,
&quot;18 - 25&quot;,
IF(
FLOOR((TODAY() - EYI_Date_of_birth__c) / 365.25) &lt;= 30,
&quot;26 - 30&quot;,
IF(
FLOOR((TODAY() - EYI_Date_of_birth__c) / 365.25) &lt;= 35,
&quot;31 - 35&quot;,
IF(
FLOOR((TODAY() - EYI_Date_of_birth__c) / 365.25) &lt;= 40,
&quot;36 - 40&quot;,
IF(
FLOOR((TODAY() - EYI_Date_of_birth__c) / 365.25) &lt;= 45,
&quot;41 - 45&quot;,
IF(
FLOOR((TODAY() - EYI_Date_of_birth__c) / 365.25) &lt;= 50,
&quot;46 - 50&quot;,
IF(
FLOOR((TODAY() - EYI_Date_of_birth__c) / 365.25) &lt;= 55,
&quot;51 - 55&quot;,
IF(
FLOOR((TODAY() - EYI_Date_of_birth__c) / 365.25) &lt;= 60,
&quot;56 - 60&quot;,
&quot;60 Above&quot;
)
)
)
)
)
)
)
)
),
NULL
)</formula>
    <label>Age Group</label>
    <type>Text</type>
</CustomField>