force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Anarcock_Referal_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Anarcock_Referal_Name__c</fullName>
    <label>Anarcock Referal Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>