force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Anarock_CP_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Anarock_CP_Name__c</fullName>
    <label>Anarock CP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>