force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Anarock_Id__c.field-meta.xml
<CustomField>
    <fullName>EYI_Anarock_Id__c</fullName>
    <label>Anarock Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>