force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Anarock_Location__c.field-meta.xml
<CustomField>
    <fullName>EYI_Anarock_Location__c</fullName>
    <label>Anarock Location</label>
    <length>120</length>
    <type>Text</type>
</CustomField>