force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Anarock_Presales_Executive__c.field-meta.xml
<CustomField>
    <fullName>EYI_Anarock_Presales_Executive__c</fullName>
    <label>Anarock Presales Executive</label>
    <length>100</length>
    <type>Text</type>
</CustomField>