force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Anarock_Sourcing_Manager__c.field-meta.xml
<CustomField>
    <fullName>EYI_Anarock_Sourcing_Manager__c</fullName>
    <label>Anarock Sourcing Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>