force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Any_Sort_Listed_Project__c.field-meta.xml
<CustomField>
    <fullName>EYI_Any_Sort_Listed_Project__c</fullName>
    <label>Any Sort Listed Project? What Did You Li</label>
    <length>80</length>
    <type>Text</type>
</CustomField>