force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Are_There_Any_Other_Projects__c.field-meta.xml
<CustomField>
    <fullName>EYI_Are_There_Any_Other_Projects__c</fullName>
    <label>Are There Any Other Projects You Have Vi</label>
    <length>80</length>
    <type>Text</type>
</CustomField>