force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Area_Requirement_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>EYI_Area_Requirement_sq_ft__c</fullName>
    <label>Area Requirement (sq. ft.)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>