force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>EYI_Asset_Class__c</fullName>
    <label>Asset Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Plot</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
                <isActive>false</isActive>
                <label>Residential</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>