force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Authentication__c.field-meta.xml
<CustomField>
    <fullName>EYI_Authentication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authentication</label>
    <type>Checkbox</type>
</CustomField>