force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Backend_OTP__c.field-meta.xml
<CustomField>
    <fullName>EYI_Backend_OTP__c</fullName>
    <label>Backend OTP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>