force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Carpet_Area_Required_Sqft__c.field-meta.xml
<CustomField>
    <fullName>EYI_Carpet_Area_Required_Sqft__c</fullName>
    <label>Carpet Area Required Sqft</label>
    <length>80</length>
    <type>Text</type>
</CustomField>