force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Cars_Owned__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cars_Owned__c</fullName>
    <label>Cars Owned</label>
    <length>80</length>
    <type>Text</type>
</CustomField>