force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Channel_Partner_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Channel_Partner_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner Code</label>
    <referenceTo>EYI_CP_Account__c</referenceTo>
    <relationshipLabel>Customer Information Form (Channel Partner Code)</relationshipLabel>
    <relationshipName>CIF_Form</relationshipName>
    <type>Lookup</type>
</CustomField>