force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Channel_Partner_not_registered__c.field-meta.xml
<CustomField>
    <fullName>EYI_Channel_Partner_not_registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Channel Partner not registered</label>
    <type>Checkbox</type>
</CustomField>