force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_CIF_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_CIF_Type__c</fullName>
    <label>CIF Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site Visit</fullName>
                <default>true</default>
                <label>Site Visit</label>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>