force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_City__c.field-meta.xml
<CustomField>
    <fullName>EYI_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <referenceTo>EYI_City__c</referenceTo>
    <relationshipLabel>CIF Records</relationshipLabel>
    <relationshipName>CIF_Records</relationshipName>
    <type>Lookup</type>
</CustomField>