force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Client_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Client_Employer_Name__c</fullName>
    <label>Client Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>