force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Client_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Client_Type__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Person</fullName>
                <default>true</default>
                <label>Person</label>
            </value>
            <value>
                <fullName>Organisation</fullName>
                <label>Organization</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>