force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Closing_Manager__c.field-meta.xml
<CustomField>
    <fullName>EYI_Closing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closing Manager</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Please tag a valid closing sales manager</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Leasing</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Information_Form1</relationshipName>
    <type>Lookup</type>
</CustomField>