force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Club_Membership__c.field-meta.xml
<CustomField>
    <fullName>EYI_Club_Membership__c</fullName>
    <label>Club Membership</label>
    <length>80</length>
    <type>Text</type>
</CustomField>