force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Company_Business_name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Company_Business_name__c</fullName>
    <label>Company / Business name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>