force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Confirm_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Confirm_Visit_Date__c</fullName>
    <label>Confirm Visit Date</label>
    <type>Date</type>
</CustomField>