force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Confirm_Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>EYI_Confirm_Visit_Time__c</fullName>
    <label>Confirm Visit Time</label>
    <type>Time</type>
</CustomField>