force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Contact__c.field-meta.xml
<CustomField>
    <fullName>EYI_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Information Form</relationshipLabel>
    <relationshipName>Customer_Information_Form</relationshipName>
    <type>Lookup</type>
</CustomField>