force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Country_code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Country_code__c</fullName>
    <defaultValue>&quot;+91&quot;</defaultValue>
    <label>Country code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_Country_ISD_Code</valueSetName>
    </valueSet>
</CustomField>