force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_CP_Exec_Mob__c.field-meta.xml
<CustomField>
    <fullName>EYI_CP_Exec_Mob__c</fullName>
    <label>Old CP Executive Mobile Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>