force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Cp_Executive_MobNumber_NotRegistered__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cp_Executive_MobNumber_NotRegistered__c</fullName>
    <label>Cp Executive MobileNumber(NotRegistered)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>