force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_CP_Executive_Name_Not_Registered__c.field-meta.xml
<CustomField>
    <fullName>EYI_CP_Executive_Name_Not_Registered__c</fullName>
    <label>REC Executive First Name(Non-Registered)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>