force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Current_Apartment_Area__c.field-meta.xml
<CustomField>
    <fullName>EYI_Current_Apartment_Area__c</fullName>
    <label>Current Apartment Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>