force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Current_Residence_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Current_Residence_Type__c</fullName>
    <label>Current Residence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rented</fullName>
            </value>
            <value>
                <fullName>Owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>