force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Customer_residential_status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Customer_residential_status__c</fullName>
    <defaultValue>&quot;Indian&quot;</defaultValue>
    <label>Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indian</fullName>
                <default>true</default>
                <label>Indian</label>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
            <value>
                <fullName>Foreign Nationals of Indian Origin</fullName>
                <isActive>false</isActive>
                <label>Foreign Nationals of Indian Origin</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>