force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>EYI_Date_of_birth__c</fullName>
    <label>Date of birth</label>
    <type>Date</type>
</CustomField>