force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Desired_Configuration__c.field-meta.xml
<CustomField>
    <fullName>EYI_Desired_Configuration__c</fullName>
    <label>Desired Configuration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_Configuration</valueSetName>
    </valueSet>
</CustomField>