force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Desired_Construction_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Desired_Construction_Status__c</fullName>
    <defaultValue>&quot;Under Construction&quot;</defaultValue>
    <label>Desired Construction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Construction</fullName>
                <default>true</default>
                <label>Under Construction</label>
            </value>
            <value>
                <fullName>Near Completion</fullName>
            </value>
            <value>
                <fullName>Ready Possession</fullName>
            </value>
            <value>
                <fullName>Pre Launch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>