force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>EYI_Email_Id__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>