force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Employment_Status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_Employment_Status</valueSetName>
    </valueSet>
</CustomField>