force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>EYI_Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_Ethnicity</valueSetName>
    </valueSet>
</CustomField>