force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Favourite_Destination_Travelled__c.field-meta.xml
<CustomField>
    <fullName>EYI_Favourite_Destination_Travelled__c</fullName>
    <label>Favourite Destination Travelled</label>
    <length>80</length>
    <type>Text</type>
</CustomField>