force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_First_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>