force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Floor_Preference_And_View_Preference__c.field-meta.xml
<CustomField>
    <fullName>EYI_Floor_Preference_And_View_Preference__c</fullName>
    <label>Floor Preference And View Preference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>