force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Free_Text_City__c.field-meta.xml
<CustomField>
    <fullName>EYI_Free_Text_City__c</fullName>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>