force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>EYI_Funding_Source__c</fullName>
    <label>Funding Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Funding</fullName>
            </value>
            <value>
                <fullName>Self-Funding</fullName>
            </value>
            <value>
                <fullName>Conditional Sale of Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>