force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Hobbies__c.field-meta.xml
<CustomField>
    <fullName>EYI_Hobbies__c</fullName>
    <label>Hobbies</label>
    <length>80</length>
    <type>Text</type>
</CustomField>