force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_How_Long_You_Have_Been_Looking__c.field-meta.xml
<CustomField>
    <fullName>EYI_How_Long_You_Have_Been_Looking__c</fullName>
    <label>How Long You Have Been Looking Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>1 Years</fullName>
            </value>
            <value>
                <fullName>More Than One Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>