force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_How_Soon_You_Want_To_Purchase__c.field-meta.xml
<CustomField>
    <fullName>EYI_How_Soon_You_Want_To_Purchase__c</fullName>
    <label>How Soon You Want To Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>2 Weeks</fullName>
            </value>
            <value>
                <fullName>3-4 Weeks</fullName>
            </value>
            <value>
                <fullName>2-3 Months</fullName>
            </value>
            <value>
                <fullName>&gt;3 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>