force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Industry__c.field-meta.xml
<CustomField>
    <fullName>EYI_Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arts And Entertainment</fullName>
            </value>
            <value>
                <fullName>Automobile</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Beauty And Fitness</fullName>
            </value>
            <value>
                <fullName>Books And Literature</fullName>
            </value>
            <value>
                <fullName>Computers And Electronics</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Diamonds And Jewellery</fullName>
            </value>
            <value>
                <fullName>Fashion</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Food And Drink</fullName>
            </value>
            <value>
                <fullName>FMCG</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Health Care</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Import And Export</fullName>
            </value>
            <value>
                <fullName>Information And Technology</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Interiors</fullName>
            </value>
            <value>
                <fullName>Internet And Telecom</fullName>
            </value>
            <value>
                <fullName>Online Communities</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pharmaceutical</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Stock Market</fullName>
            </value>
            <value>
                <fullName>Textile &amp; Garments</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>