force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_IS_CP_Exist__c.field-meta.xml
<CustomField>
    <fullName>EYI_IS_CP_Exist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS CP Exist</label>
    <type>Checkbox</type>
</CustomField>