force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_isActive__c.field-meta.xml
<CustomField>
    <fullName>EYI_isActive__c</fullName>
    <formula>IF( ISBLANK( EYI_Opportunity__c ) , false, IF(EYI_Opportunity__r.EYI_Days_Remaining_For_Expiry__c = &apos;Expired&apos;,false,true))</formula>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>