force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Last_Name__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>